test/compile_errors/binary_schema_bad_tdisp.zig
const fits = @import("zigfitsio");

comptime {
    _ = fits.BinarySchema(&.{
        .{ .name = "COUNT", .tform = "1J", .tdisp = "Q8" },
    });
}
